Add Detekt library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("io.gitlab.arturbosch.detekt").version("1.22.0")
 }
 
 android {
@@ -31,6 +32,14 @@ android {
         jvmTarget = '1.8'
     }
 }
+
+detekt {
+    toolVersion = "1.22.0"
+    config = files("config/detekt/detekt.yml")
+    buildUponDefaultConfig = true
+
+}
+
 
 dependencies {
 
