--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("io.gitlab.arturbosch.detekt").version("1.22.0")
 }
 
+subprojects {
+    afterEvaluate {
+        def detektTask = tasks.named("detekt")
+                .configure {
+                    reports {
+                        html.required.set(true)
+                        sarif.required.set(false)
+                        xml.required.set(false)
+                        txt.required.set(false)
+                        md.required.set(false)
+                    }
+                }
 
+        tasks.named("build"){
+            dependsOn detektTask
+        }
+    }
+}
