Modify detekt.yml location

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
 detekt {
     toolVersion = "1.22.0"
-    config = files("config/detekt/detekt.yml")
+    config = files("${project.rootDir.absolutePath}/config/detekt/detekt.yml")
     buildUponDefaultConfig = true
 
 }
