Fix detekt prebuild bug at gradle

--- a/build.gradle
+++ b/build.gradle
@@ -14,19 +14,17 @@ plugins {
 
 subprojects {
     afterEvaluate {
-        def detektTask = tasks.named("detekt")
-                .configure {
-                    reports {
-                        html.required.set(true)
-                        sarif.required.set(false)
-                        xml.required.set(false)
-                        txt.required.set(false)
-                        md.required.set(false)
-                    }
-                }
-
-        tasks.named("build"){
-            dependsOn detektTask
+        def detektTaskProvider = tasks.named("detekt")
+        detektTaskProvider.configure {
+            reports {
+                html.required.set(true)
+                sarif.required.set(false)
+                xml.required.set(false)
+                txt.required.set(false)
+                md.required.set(false)
+                html.outputLocation.set(file("${project.rootDir.absolutePath}/build/reports/detekt/report.html"))
+            }
         }
+        tasks.getByName("preBuild").finalizedBy(detektTaskProvider)
     }
 }
